--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "sass": "^1.19.0"
   },
+  "homepage": "https://carolinali.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
