--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "homepage": "https://carolinali.github.io",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
