--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "sass": "^1.19.0"
   },
