--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.5",
     "sass": "^1.19.0"
   },
   "homepage": "https://carolinali.github.io",
