--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.8.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.0",
