--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
@@ -12,7 +13,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.5",
-    "sass": "^1.19.0"
+    "sass": "^1.19.0",
+    "save": "^2.4.0"
   },
   "homepage": "https://carolinali.github.io",
   "scripts": {
